--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,9 +13,9 @@
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logo.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "251x251"
     }
   ],
   "start_url": ".",
