--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "aos": "^2.3.4",
-    "axios": "^0.19.2",
-    "node-sass": "^4.13.1",
+    "axios": "^0.21.4",
+    "node-sass": "^6.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-html-parser": "^2.0.2",
+    "react-pdf": "^5.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-transition-group": "^4.3.0"
